# src/core/model/EntertainmentModel.ts
@@ -1,4 +1,6 @@
 export type EntertainmentTypes = {
     name: string,
-    entertainmentType_Id: number
+    entertainmentType_Id: number,
+    entertainmentStatus_Id: number,
+    user: string
 }
