# src/core/model/EntertainmentOrderModel.ts
@@ -1,0 +1,7 @@
+export type EntertainmentOrdeTypes = {
+    entertainment_Id: number,
+    entertainmentStatus_Id: number,
+    rentDays: number,
+    user: string,
+    datePrevision: Date
+} 
